--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -27,7 +27,7 @@ jobs:
         with:
           node-version: 16
           registry-url: https://registry.npmjs.org/
-      - run: npm build
+      - run: npm run build
       - run: npm ci --production
       - run: npm version minor -m "Release version %s"
       - run: git push && git push --tags
